--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "start:prod": "next start -p 80",
     "lint": "next lint"
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "mongoose": "^7.5.0",
     "next": "13.4.12",
-    "mongoose": "^7.3.3",
+    "next-share": "^0.25.0",
+    "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3"
   }
 }
