--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
     "next": "13.4.12",
     "next-share": "^0.25.0",
