--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,4 @@
-NEXT_PUBLIC_PORT = http://localhost:3000
+NEXT_PUBLIC_PORT = http://52.66.239.21:3000/
 MONGO_URI = mongodb+srv://satyamguptasg1234asd:satyamgupta00@mongo.dukpbnv.mongodb.net/?retryWrites=true&w=majority
+# NEXT_PUBLIC_PORT = http://localhost:3000/
+# MONGO_URI = mongodb://localhost:27017
